Removed the Right bar tab Locked view port

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <base href="/" />
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <title>Where Is Pokemon</title>
+    <meta name="description" content="Find Pokemon go around the world">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
