--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
     </script>
 
     <!-- manual includes -->
-    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyBbw9PJvWsQn_qmBIMSxFAMrtSJcqM70Sg'></script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -56,6 +56,14 @@
     <script src="bower_components/sweetalert2/dist/sweetalert2.js"></script>
     <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
     <script src="bower_components/ngGeolocation/ngGeolocation.js"></script>
+    <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/markerclustererplus/src/markerclusterer.js"></script>
+    <script src="bower_components/google-maps-utility-library-v3-markerwithlabel/dist/markerwithlabel.js"></script>
+    <script src="bower_components/google-maps-utility-library-v3-infobox/dist/infobox.js"></script>
+    <script src="bower_components/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
+    <script src="bower_components/js-rich-marker/src/richmarker.js"></script>
+    <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -63,7 +71,6 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/pokedex.js"></script>
-    <script src="scripts/controllers/report.js"></script>
     <!-- Replace the value of the key parameter with your own API key. -->
 
     <!-- endbuild -->
