--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.css" />
     <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/angular-notify/dist/angular-notify.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -71,6 +72,7 @@
     <script src="bower_components/angular-vibrator/src/vibrator.js"></script>
     <script src="bower_components/humanize-duration/humanize-duration.js"></script>
     <script src="bower_components/angular-timer/dist/angular-timer.js"></script>
+    <script src="bower_components/angular-notify/dist/angular-notify.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
